# product-reviews

./: 404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-master.yml
contributing/: index.html
docs/: conftest.py  index.md  installation.md  modules.md  usage.md
history/: index.html
installation/: index.html
modules/: index.html
old/: product_reviews
product-reviews-provider-example/: README.md  pyproject.toml
product-reviews-provider-example/src/product_reviews_provider_example/providers/: example.py
search/: search_index.json
src/product_reviews/: __init__.py  models.py  pytest_plugin.py  reviews.py  utils.py
src/product_reviews/cli/: __init__.py  health_check.py  main.py  test_command.py
src/product_reviews/cli/commands/: base.py  command_health.py  command_list.py  command_scrape.py  command_test.py
src/product_reviews/features/: __init__.py
src/product_reviews/providers/: __init__.py  base.py  exceptions.py  loader_entrypoint.py  loader_fs.py  loaders.py  registry.py
src/product_reviews/testing/: __init__.py  cache.py  recorder.py
tests/: conftest.py  test_base.py  test_cli_main.py  test_cli_test_command.py  test_dummy_provider.py  test_exceptions.py  test_foo.py  test_generator.py  test_health_check.py  test_http_capture.py  test_integration.py  test_jsonfs_provider.py  test_loader_entrypoint.py  test_loader_fs.py  test_loaders.py  test_mock_storage.py  test_mock_utils.py  test_models.py  test_provider_responses.py  test_providers.py  test_providers_base.py  test_registry.py  test_reviews.py  test_utils.py
usage/: index.html
(+12 files in other folders)
