[project]
name = "product-reviews-provider-example"
version = "0.1.0"
description = "Example provider package for product-reviews"
authors = [{ name = "Alexander Pitkin", email = "peleccom@gmail.com" }]
readme = "README.md"
keywords = ['python', 'reviews', 'parser', 'plugin', 'example']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://peleccom.github.io/product-reviews/"
Repository = "https://github.com/peleccom/product-reviews"
Documentation = "https://peleccom.github.io/product-reviews/"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.entry-points.'product_reviews.providers']
example = 'product_reviews_provider_example.providers.example:ExampleReviewsProvider'
[dependency-groups]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/product_reviews_provider_example"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY",
]
ignore = ["E501", "E731"]

[tool.ruff.format]
preview = true
